# CircuitPython_FC_V5b_HAL

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
proves_fc_v5b/: proves_fc_v5b.py
tools/uv-0.5.24/: env  env.fish
