[project]
name = "circuitpython_fc_v5b_hal"
version = "1.0.0"
description = "A Simple CircuitPython Hardware Abstraction Layer for PROVES V5b Flight Controller Boards."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-typing==1.11.2",
    "circuitpython-stubs==9.2.5",
    "pyright[nodejs]==1.1.399",
    "pre-commit==4.0.1",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.setuptools.packages.find]
exclude = ["typings*"]
include = ["proves_fc_v5b*"]

[tool.pyright]
include = ["proves_fc_v5b.py"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "examples",
    "typings",
]
stubPath = "./typings"
reportMissingModuleSource = false
